Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MostSpecific04.out
MostSpecific04.java:25:11: compiler.err.ref.ambiguous: map, kindname.method, map(MostSpecific04.DoubleMapper<? super E>), MostSpecific04.MyList, kindname.method, map(MostSpecific04.LongMapper<? super E>), MostSpecific04.MyList
1 error
